@@ -1,7 +1,7 @@
 // synthv1_config.h
 //
 /****************************************************************************
-   Copyright (C) 2012-2023, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2024, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -24,12 +24,12 @@
 
 #include "config.h"
 
-#define SYNTHV1_TITLE       PACKAGE_NAME
+#define SYNTHV1_TITLE       PROJECT_NAME
 
-#define SYNTHV1_SUBTITLE    "an old-school polyphonic synthesizer."
-#define SYNTHV1_WEBSITE     "https://synthv1.sourceforge.io"
-#define SYNTHV1_COPYRIGHT   "Copyright (C) 2012-2023, rncbc aka Rui Nuno Capela. All rights reserved."
+#define SYNTHV1_SUBTITLE    PROJECT_DESCRIPTION
+#define SYNTHV1_WEBSITE     PROJECT_HOMEPAGE_URL
 
+#define SYNTHV1_COPYRIGHT   "Copyright (C) 2012-2024, rncbc aka Rui Nuno Capela. All rights reserved."
 #define SYNTHV1_DOMAIN      "rncbc.org"
 
 
