@@ -4,6 +4,11 @@ synthv1 - an old-school polyphonic synthesizer
 ChangeLog
 
 
+GIT HEAD
+
+- Updated copyright headers into the New Year (2024).
+
+
 0.9.33  2023-12-20  An End-of-Autumn'23 Release.
 
 - Minor optimization to denormal avoidance on some fx's.
